src/main/java/org/example/springjpaalena/error/CategoryNotFoundException.java
package org.example.springjpaalena.error;

public class CategoryNotFoundException extends RuntimeException {
    public CategoryNotFoundException(String message) {
        super(message);
    }
}
